--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  overflow-y: hidden;
 }
 
 .App-logo {
@@ -29,4 +30,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.test-image {
+  position: absolute;
+  left: 5%;
+  top: 80px;
+  height: 630px;
+  width: auto;
 }
