--- a/front-end/src/constants/styles.css
+++ b/front-end/src/constants/styles.css
@@ -1,6 +1,11 @@
 .iframe {
-  height: 500px;
-  width: 1000px;
+  position: absolute;
+  left: 0;
+  height: 1000px;
+  width: 2000px;
   zoom: 0.5;
+  margin-left: 4.9%;
+  margin-top: 160px;
   /* transform: scale(3, 3); */
+  z-index: 1;
 }
