--- a/front-end/src/components/ProfilePic/ProfilePic.css
+++ b/front-end/src/components/ProfilePic/ProfilePic.css
@@ -17,4 +17,16 @@
   margin-top: 15px;
   height: 50px;
   width: 50px;
+  background-color: rgba(47, 137, 252, 1);
+  border-radius: 25px;
+  text-align: center;
+}
+
+.circle-text {
+  position: absolute;
+  top: 13px;
+  left: 12px;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
 }
