Edited iframe size

--- a/front-end/src/components/StreamPanel/StreamPanel.css
+++ b/front-end/src/components/StreamPanel/StreamPanel.css
@@ -2,7 +2,8 @@
   position: absolute;
   left: 305px;
   top: 210px;
-  height: 370px;
+  /* height: 370px; */
+  height: 47vh;
   width: 660px;
   overflow: hidden;
   transform: scale(1.7, 1.7);
